--- a/en/successreg.html
+++ b/en/successreg.html
@@ -250,7 +250,7 @@
               <!-- Some Text -->
               <!-- <p>You are registered successfully.</p> -->
               <div class="box">
-                <div class="button1"><a href="login.html" class="btn btn-info"><i class="fa fa-sign-in fa-2x" aria-hidden="true"></i> &nbsp;LOGIN / PRIJAVA</a></div>
+                <div class="button1"><a href="login.php" class="btn btn-info"><i class="fa fa-sign-in fa-2x" aria-hidden="true"></i> &nbsp;LOGIN / PRIJAVA</a></div>
                 <div class="button2"><a href="index.html" class="btn btn-danger"><i class="fa fa-home fa-2x" aria-hidden="true"></i> &nbsp;Home Page / NASLOVNA STRANA</a></div>
 
               </div>
