Izmena index stranica - dodat link u organizatore

--- a/en/index.html
+++ b/en/index.html
@@ -248,6 +248,7 @@
           <p>Public connection Ltd, Novi Sad</p>
           <p><a class="link-naslovna" href="http://www.sajam.net/live/Congress+Centre">Congress Centre "Master" Novi Sad Fair</a></p>
           <p><a class="link-naslovna" href="http://www.ftn.uns.ac.rs/1742896254/departman-za-saobracaj">University of Novi Sad, Faculty of Technical Sciences - Traffic Department</a></p>
+          <p><a class="link-naslovna" href="http://een.ec.europa.eu/">Enterprise Europe Network</a></p>
         </div>
         <div class="tekst1 col-xs-12 col-md-4">
           <h1>SUPORTED BY</h1>
