--- a/sr/index.html
+++ b/sr/index.html
@@ -249,6 +249,7 @@
           <p>Public connection d.o.o. Novi Sad</p>
           <p><a class="link-naslovna" href="http://www.kongresnicentar.sajam.net/">Kongresni centar "Master" Novosadskog sajma</a></p>
           <p><a class="link-naslovna" href="http://www.ftn.uns.ac.rs/1742896254/departman-za-saobracaj">Univerzitet u Novom Sadu, Fakultet tehničkih nauka - Departman za saobraćaj</a></p>
+          <p><a class="link-naslovna" href="http://www.een.rs/">Evropska mreža preduzetništva</a></p>
         </div>
         <div class="tekst1 col-xs-12 col-md-4">
           <h1>PODRŠKA</h1>
