Ubacene nove stranice - padajuci meni

--- a/en/exhibitors-profile.html
+++ b/en/exhibitors-profile.html
@@ -6,7 +6,7 @@
 <head>
 
   <!-- Basic -->
-  <title>VISITORS | TRAFFIC SOLUTIONS EXPO</title>
+  <title>PROFILE OF EXHIBITORS | TRAFFIC SOLUTIONS EXPO</title>
 
   <!-- Define Charset -->
   <meta charset="utf-8">
@@ -152,7 +152,7 @@
                   <a class="language-choose active" href="#"><i>EN</i></a>
                 </li>
                 <li>
-                  <a class="language-choose" href="../sr/posetioci.html"><i>SR</i></a>
+                  <a class="language-choose" href="../sr/profil-izlagaca.html"><i>SR</i></a>
                 </li>
               </ul>
               <!-- End Social Links -->
@@ -201,7 +201,7 @@
                 <a href="ts-expo.html">TS-EXPO</a>
               </li>
               <li class="drop">
-                <a class="not-link" href="#">EXHIBITORS</a>
+                <a class="active not-link" href="#">EXHIBITORS</a>
                 <ul class="dropdown">
                   <li><a href="exhibitors-profile.html">PROFILE OF EXHIBITORS</a>
                   </li>
@@ -210,13 +210,13 @@
                 </ul>
               </li>
               <li>
-                <a class="active" href="visitors.html">VISITORS</a>
+                <a href="visitors.html">VISITORS</a>
               </li>
               <li>
                 <a href="program_en.html">PROGRAM</a>
               </li>
               <li>
-                <a href="location.html">Location & Contact</a>
+                <a href="location.html">LOCATION & CONTACT</a>
               </li>
             </ul>
             <!-- End Navigation List -->
@@ -232,7 +232,7 @@
             <a href="ts-expo.html">TS-EXPO</a>
           </li>
           <li>
-            <a class="not-link" href="#">EXHIBITORS</a>
+            <a class="active" href="#">EXHIBITORS</a>
             <ul class="dropdown">
               <li><a href="exhibitors-profile.html">PROFILE OF EXHIBITORS</a>
               </li>
@@ -241,7 +241,7 @@
             </ul>
           </li>
           <li>
-            <a class="active" href="visitors.html">VISITORS</a>
+            <a href="visitors.html">VISITORS</a>
           </li>
           <li>
             <a href="program_en.html">PROGRAM</a>
@@ -291,19 +291,28 @@
             <div class="col-md-12">
 
               <!-- Classic Heading -->
-              <h4 class="classic-title"><span>VISITORS</span></h4>
+              <h4 class="classic-title"><span>PROFILE OF EXHIBITORS</span></h4>
 
               <!-- Some Text -->
-              <p>Visitors of TRAFFIC SOLUTIONS EXPO are:</p>
+              <p>Exhibitors at TRAFFIC SOLUTIONS EXPO are producers, importers of the product and/or the providers of various services in the field of traffic and traffic infrastructure, with an emphasis on all types of traffic - road, rail, water, air and postal traffic:</p>
               <ul class="icons-list">
-                <li><i class="fa fa-check-circle"></i>Decision-makers at the international, national, provincial and local level who work in the field of traffic</li>
-                <li><i class="fa fa-check-circle"></i>Representatives of international and local organizations, funds and entities to invest in the fields of traffic and traffic infrastructure</li>
-                <li><i class="fa fa-check-circle"></i>Representatives of national, regional and local public enterprises, authorities and institutes in the field of traffic</li>
-                <li><i class="fa fa-check-circle"></i>The contractors, equipment manufacturers and service providers in traffic</li>
-                <li><i class="fa fa-check-circle"></i>Representatives of educational institutions and professional organizations in the field of traffic</li>
-                <li><i class="fa fa-check-circle"></i>Representatives of the media</li>
-                <li><i class="fa fa-check-circle"></i>Wider public interested in the topic of traffic</li>
+                <li><i class="fa fa-check-circle"></i> policies, strategies and development plans in the field of traffic</li>
+                <li><i class="fa fa-check-circle"></i> Traffic Engineering - Planning and design of objects in traffic, control and consulting</li>
+                <li><i class="fa fa-check-circle"></i> systems and equipment (hardware and software) for the design, management, measurement, monitoring and control of traffic</li>
+                <li><i class="fa fa-check-circle"></i> The construction and maintenance of traffic infrastructure</li>
+                <li><i class="fa fa-check-circle"></i> Mechanization and equipment for construction and maintenance of traffic infrastructure</li>
+                <li><i class="fa fa-check-circle"></i> Signalization and equipment in traffic</li>
+                <li><i class="fa fa-check-circle"></i> Passenger transport - planning and organization of transport, vehicles and equipment</li>
+                <li><i class="fa fa-check-circle"></i> Logistics, transport and services in transport - packing, handling, warehousing and freight forwarding operations</li>
+                <li><i class="fa fa-check-circle"></i> Mechanization and equipment for packaging, transport, handling and storage of goods</li>
+                <li><i class="fa fa-check-circle"></i> Services in postal consignments, telecommunications and communications</li>
+                <li><i class="fa fa-check-circle"></i> Training, professional education and training of traffic participants</li>
+                <li><i class="fa fa-check-circle"></i> Insurance for traffic - insurance of passengers, cargo, vehicles and equipment</li>
+                <li><i class="fa fa-check-circle"></i> Business credit for companies in the field of traffic</li>
+                <li><i class="fa fa-check-circle"></i> The media and publishing in the field of traffic</li>
+                <li><i class="fa fa-check-circle"></i> Other services in traffic - the fuel supply, technical inspections, maintenance of vehicles or equipment, roadside assistance, etc.</li>
               </ul>
+
 
             </div>
 
@@ -320,19 +329,6 @@
             <!-- </div> -->
 
           </div>
-
-          <div class="row poziv">
-            <div class="call-action call-action-boxed call-action-style1 no-descripton clearfix">
-              <!-- Call Action Button -->
-              <!--<div class="button-side"><a href="#" class="btn-system border-btn btn-medium">Purchase It Now</a></div>-->
-              <!-- Call Action Text -->
-              <h2 class="primary">Entrance to TRAFFIC SOLUTIONS EXPO 2016 is free for all visitors, with obligatory registration, without which will not be possible to enter the fair.</h2>
-              <button class="register-button-pos" data-toggle="modal" data-target="#myModalHorizontal">APPLICATION FORM</button>
-            </div>
-          </div>
-
-          <!-- Divider -->
-          <div class="hr1" style="margin-bottom:50px;"></div>
         </div>
       </div>
     </div>
