--- a/en/exhibitors.html
+++ b/en/exhibitors.html
@@ -195,6 +195,9 @@
                 <a href="visitors.html">VISITORS</a>
               </li>
               <li>
+                <a href="program_en.html">PROGRAM</a>
+              </li>
+              <li>
                 <a href="location.html">Location & Contact</a>
               </li>
             </ul>
@@ -215,6 +218,9 @@
           </li>
           <li>
             <a href="visitors.html">VISITORS</a>
+          </li>
+          <li>
+            <a href="program_en.html">PROGRAM</a>
           </li>
           <li>
             <a href="location.html">LOCATION & CONTACT</a>
@@ -328,6 +334,9 @@
 
               <div class="registration">
                 <a href="docs/reg/Registration_form.pdf" target="_blank"><button class="register-button-izv"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>REGISTRATION FORM</button></a>
+              </div>
+              <div class="registration">
+                <a href="docs/reg/General_terms_and_conditions_for_exhibiting.pdf" target="_blank"><button class="register-button-izv2"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>General terms and conditions for exhibiting</button></a>
               </div>
 
             </div>
