--- a/sr/izlagaci.html
+++ b/sr/izlagaci.html
@@ -198,6 +198,9 @@
                 <a href="posetioci.html">POSETIOCI</a>
               </li>
               <li>
+                <a href="program.html">PROGRAM</a>
+              </li>
+              <li>
                 <a href="lokacija.html">Lokacija i kontakt</a>
               </li>
             </ul>
@@ -218,6 +221,9 @@
           </li>
           <li>
             <a href="posetioci.html">POSETIOCI</a>
+          </li>
+          <li>
+            <a href="program.html">PROGRAM</a>
           </li>
           <li>
             <a href="lokacija.html">LOKACIJA I KONTAKT</a>
@@ -330,6 +336,9 @@
 
                <div class="registration">
                 <a href="../en/docs/reg/Registracioni_formular.pdf" target="_blank"><button class="register-button-izv"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>REGISTRACIONI FORMULAR</button></a>
+               </div>
+               <div class="registration">
+                <a href="../en/docs/reg/Opsti_uslovi_za_izlaganje.pdf" target="_blank"><button class="register-button-izv2"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>Opšti uslovi za izlaganje</button></a>
                </div>
                
 
