--- a/en/exhibitors-terms.html
+++ b/en/exhibitors-terms.html
@@ -6,7 +6,7 @@
 <head>
 
   <!-- Basic -->
-  <title>VISITORS | TRAFFIC SOLUTIONS EXPO</title>
+  <title>GENERAL TERMS | TRAFFIC SOLUTIONS EXPO</title>
 
   <!-- Define Charset -->
   <meta charset="utf-8">
@@ -152,7 +152,7 @@
                   <a class="language-choose active" href="#"><i>EN</i></a>
                 </li>
                 <li>
-                  <a class="language-choose" href="../sr/posetioci.html"><i>SR</i></a>
+                  <a class="language-choose" href="../sr/uslovi-izlaganja.html"><i>SR</i></a>
                 </li>
               </ul>
               <!-- End Social Links -->
@@ -201,7 +201,7 @@
                 <a href="ts-expo.html">TS-EXPO</a>
               </li>
               <li class="drop">
-                <a class="not-link" href="#">EXHIBITORS</a>
+                <a class="active not-link" href="#">EXHIBITORS</a>
                 <ul class="dropdown">
                   <li><a href="exhibitors-profile.html">PROFILE OF EXHIBITORS</a>
                   </li>
@@ -210,13 +210,13 @@
                 </ul>
               </li>
               <li>
-                <a class="active" href="visitors.html">VISITORS</a>
+                <a href="visitors.html">VISITORS</a>
               </li>
               <li>
                 <a href="program_en.html">PROGRAM</a>
               </li>
               <li>
-                <a href="location.html">Location & Contact</a>
+                <a href="location.html">LOCATION & CONTACT</a>
               </li>
             </ul>
             <!-- End Navigation List -->
@@ -232,7 +232,7 @@
             <a href="ts-expo.html">TS-EXPO</a>
           </li>
           <li>
-            <a class="not-link" href="#">EXHIBITORS</a>
+            <a class="active" href="#">EXHIBITORS</a>
             <ul class="dropdown">
               <li><a href="exhibitors-profile.html">PROFILE OF EXHIBITORS</a>
               </li>
@@ -241,7 +241,7 @@
             </ul>
           </li>
           <li>
-            <a class="active" href="visitors.html">VISITORS</a>
+            <a href="visitors.html">VISITORS</a>
           </li>
           <li>
             <a href="program_en.html">PROGRAM</a>
@@ -265,8 +265,8 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <!-- <h2>TS-EXPO</h2>
-            <p>Traffic Solutions Expo</p> -->
+            <h2>GENERAL TERMS AND CONDITIONS FOR EXHIBITING</h2>
+            <!-- <p>Traffic Solutions Expo</p> -->
           </div>
           <div class="col-md-6">
             <ul class="breadcrumbs">
@@ -288,54 +288,137 @@
 
           <div class="row">
 
-            <div class="col-md-12">
+            <div class="col-md-6">
+
 
               <!-- Classic Heading -->
-              <h4 class="classic-title"><span>VISITORS</span></h4>
+              <h4 class="classic-title"><span>PRICE LIST</span></h4>
+
+              <!-- Price Table Begin -->
+              <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 no-left-padding">
+                <div class="db-wrapper">
+                    <div class="db-pricing-seven">
+                        <ul>
+                            <li class="price">These prices are valid <span style="color:#000; font-weight:500;">until September 1st, 2016</span></li>
+
+                            <li class="price_header">TYPE<br>OF SERVICE:</li>
+                            <li class="price_header kolona">PRICES IN EUR*</li>
+                            <li>Space without stand construction /m²:</li>
+                            <li class="kolona">25</li>
+                            <li>Decoration and construction /m²:</li>
+                            <li class="kolona">40</li>
+                            <li>Graphics on construction /m²:</li>
+                            <li class="kolona">15</li>
+                            <li>Electric receptacle of up 15 kW and electricity consumption:</li>
+                            <li class="kolona">25</li>
+                            <li>Counter with two chairs and electricity consumption:</li>
+                            <li class="kolona">250</li>
+                            <li>Rental of the conference room for a presentation, 100 seats/1h:</li>
+                            <li class="kolona">140</li>
+                        </ul>
+                        <!-- <div class="pricing-footer">
+                          * Za izlagače iz R.Srbije cena se iskazuje u dinarskoj protivvrednosti po kursu NBS na dan uplate.
+                        </div> -->
+                    </div>
+                    <div class="table_reg"><a href="docs/reg/Registration_form.pdf" target="_blank"><button class="register-button-izv"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> REGISTRATION FORM</button></a></div>
+                    <div class="pricing-footer">
+                      * For exhibitors from the Republic of Serbia price is expressed in dinars at the exchange rate of the National Bank of Serbia on the payment date.
+                    </div>
+                </div>
+              </div>  
+            
+            <!-- Price Table End -->
+
+            <!-- Price Table Begin -->
+              <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 no-left-padding">
+                <div class="db-wrapper">
+                    <div class="db-pricing-seven">
+                        <ul>
+                            <li class="price">These prices are valid <span style="color:#000; font-weight:500;">until October 1st, 2016</span></li>
+
+                            <li class="price_header">TYPE<br>OF SERVICE:</li>
+                            <li class="price_header kolona">PRICES IN EUR*</li>
+                            <li>Space without stand construction /m²:</li>
+                            <li class="kolona">30</li>
+                            <li>Decoration and construction /m²:</li>
+                            <li class="kolona">45</li>
+                            <li>Graphics on construction /m²:</li>
+                            <li class="kolona">15</li>
+                            <li>Electric receptacle of up 15 kW and electricity consumption:</li>
+                            <li class="kolona">25</li>
+                            <li>Counter with two chairs and electricity consumption:</li>
+                            <li class="kolona">300</li>
+                            <li>Rental of the conference room for a presentation, 100 seats/1h:</li>
+                            <li class="kolona">150</li>
+                        </ul>
+                        <!-- <div class="pricing-footer">
+                          * Za izlagače iz R.Srbije cena se iskazuje u dinarskoj protivvrednosti po kursu NBS na dan uplate.
+                        </div> -->
+                    </div>
+                    <div class="table_reg"><a href="docs/reg/Registration_form.pdf" target="_blank"><button class="register-button-izv"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> REGISTRATION FORM</button></a></div>
+                    <div class="pricing-footer">
+                      * For exhibitors from the Republic of Serbia price is expressed in dinars at the exchange rate of the National Bank of Serbia on the payment date.
+                    </div>
+                </div>
+              </div>  
+          
+              <!-- Price Table End -->
+
+              <div class="registration">
+                <a href="docs/reg/General_terms_and_conditions_for_exhibiting.pdf" target="_blank"><button class="register-button-izv2"><i class="fa fa-file-pdf-o" aria-hidden="true"></i>General terms and conditions for exhibiting</button></a>
+               </div>
+          </div>
+
+
+            <div class="col-md-6">
+
+              <!-- Classic Heading -->
+              <h4 class="classic-title"><span>STAND CONSTRUCTION</span></h4>
 
               <!-- Some Text -->
-              <p>Visitors of TRAFFIC SOLUTIONS EXPO are:</p>
+              <p>Ordered stands will have the following fittings, furnishings and connections:</p>
               <ul class="icons-list">
-                <li><i class="fa fa-check-circle"></i>Decision-makers at the international, national, provincial and local level who work in the field of traffic</li>
-                <li><i class="fa fa-check-circle"></i>Representatives of international and local organizations, funds and entities to invest in the fields of traffic and traffic infrastructure</li>
-                <li><i class="fa fa-check-circle"></i>Representatives of national, regional and local public enterprises, authorities and institutes in the field of traffic</li>
-                <li><i class="fa fa-check-circle"></i>The contractors, equipment manufacturers and service providers in traffic</li>
-                <li><i class="fa fa-check-circle"></i>Representatives of educational institutions and professional organizations in the field of traffic</li>
-                <li><i class="fa fa-check-circle"></i>Representatives of the media</li>
-                <li><i class="fa fa-check-circle"></i>Wider public interested in the topic of traffic</li>
+                <li><i class="fa fa-check-circle"></i>1 table brochure display</li>
+                <li><i class="fa fa-check-circle"></i>1 table</li>
+                <li><i class="fa fa-check-circle"></i>3 chairs</li>
+                <li><i class="fa fa-check-circle"></i>1 counter and stool</li>
+                <li><i class="fa fa-check-circle"></i>1 lockable storage of 1 sq. m.</li>
+                <li><i class="fa fa-check-circle"></i>partition walls (white), with a height of 250 cm</li>
+                <li><i class="fa fa-check-circle"></i>carpet tiles</li>
+                <li><i class="fa fa-check-circle"></i>fascia board (white) with company name and stand number</li>
+                <li><i class="fa fa-check-circle"></i>2 spotlights per 5 sq. m.</li>
+                <li><i class="fa fa-check-circle"></i>1 220-volt socket</li>
+                <li><i class="fa fa-check-circle"></i>1 electricity connection (day-time power) and consumption for standard 220-volt socket and standard spotlights</li>
               </ul>
 
+              <div class="hr1" style="margin-bottom:50px;"></div>
+
+              <h4 class="classic-title"><span>THE APPEARANCE OF THE STAND</span></h4>
+
+              <!-- Start image gallery -->
+                <div class="flickr-widget">
+                  <ul class="flickr-list">
+                    <li>
+                      <a href="images/exhibition/stand1.jpg" class="lightbox">
+                        <img alt="" src="../en/images/exhibition/stand1.jpg">
+                      </a>
+                    </li>
+                    <li>
+                      <a href="images/exhibition/stand2.jpg" class="lightbox">
+                        <img alt="" src="../en/images/exhibition/stand2.jpg">
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              <!-- End Touch Slider --> 
             </div>
-
-            <!-- <div class="col-md-5"> -->
-
-              <!-- Start Touch Slider -->
-              <!-- <div class="touch-slider" data-slider-navigation="true" data-slider-pagination="true">
-                <div class="item"><img alt="" src="images/ts-expo/pic1.jpg"></div>
-                <div class="item"><img alt="" src="images/ts-expo/pic2.jpg"></div>
-                <div class="item"><img alt="" src="images/ts-expo/pic3.jpg"></div>
-              </div> -->
-              <!-- End Touch Slider -->
-
-            <!-- </div> -->
-
-          </div>
-
-          <div class="row poziv">
-            <div class="call-action call-action-boxed call-action-style1 no-descripton clearfix">
-              <!-- Call Action Button -->
-              <!--<div class="button-side"><a href="#" class="btn-system border-btn btn-medium">Purchase It Now</a></div>-->
-              <!-- Call Action Text -->
-              <h2 class="primary">Entrance to TRAFFIC SOLUTIONS EXPO 2016 is free for all visitors, with obligatory registration, without which will not be possible to enter the fair.</h2>
-              <button class="register-button-pos" data-toggle="modal" data-target="#myModalHorizontal">APPLICATION FORM</button>
-            </div>
-          </div>
 
           <!-- Divider -->
           <div class="hr1" style="margin-bottom:50px;"></div>
         </div>
       </div>
     </div>
+    <div class="hr1" style="margin-bottom:50px;"></div>
     <!-- End content -->
 
 
