--- a/en/ts-expo.html
+++ b/en/ts-expo.html
@@ -6,7 +6,7 @@
 <head>
 
   <!-- Basic -->
-  <title>TRAFFIC SOLUTIONS EXPO</title>
+  <title>TS-EXPO | TRAFFIC SOLUTIONS EXPO</title>
 
   <!-- Define Charset -->
   <meta charset="utf-8">
@@ -72,6 +72,18 @@
 
   <!--[if IE 8]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+
+  <!-- Google Analytics Code -->
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-76465485-1', 'auto');
+  ga('send', 'pageview');
+
+  </script>
 
 </head>
 
@@ -188,11 +200,20 @@
               <li>
                 <a class="active" href="ts-expo.html">TS-EXPO</a>
               </li>
-              <li>
-                <a href="exhibitors.html">EXHIBITORS</a>
+              <li class="drop">
+                <a class="not-link" href="#">EXHIBITORS</a>
+                <ul class="dropdown">
+                  <li><a href="exhibitors-profile.html">PROFILE OF EXHIBITORS</a>
+                  </li>
+                  <li><a href="exhibitors-terms.html">GENERAL TERMS</a>
+                  </li> 
+                </ul>
               </li>
               <li>
                 <a href="visitors.html">VISITORS</a>
+              </li>
+              <li>
+                <a href="program_en.html">PROGRAM</a>
               </li>
               <li>
                 <a href="location.html">Location & Contact</a>
@@ -205,19 +226,28 @@
         <!-- Mobile Menu Start -->
         <ul class="wpb-mobile-menu">
           <li>
-            <a href="index.html">Home</a>
+            <a href="index.html">HOME</a>
           </li>
           <li>
             <a class="active" href="ts-expo.html">TS-EXPO</a>
           </li>
           <li>
-            <a href="exhibitors.html">EXHIBITORS</a>
+            <a class="not-link" href="#">EXHIBITORS</a>
+            <ul class="dropdown">
+              <li><a href="exhibitors-profile.html">PROFILE OF EXHIBITORS</a>
+              </li>
+              <li><a href="exhibitors-terms.html">GENERAL TERMS</a>
+              </li>
+            </ul>
           </li>
           <li>
             <a href="visitors.html">VISITORS</a>
           </li>
           <li>
-            <a href="location.html">Location & Contact</a>
+            <a href="program_en.html">PROGRAM</a>
+          </li>
+          <li>
+            <a href="location.html">LOCATION & CONTACT</a>
           </li>
         </ul>
         <!-- Mobile Menu End -->
@@ -282,6 +312,8 @@
                 <li><i class="fa fa-check-circle"></i>Intelligent Trasportations Systems (ITS)</li>
                 <li><i class="fa fa-check-circle"></i>Accessibility</li>
                 <li><i class="fa fa-check-circle"></i>Traffic investments</li>
+                <li><i class="fa fa-check-circle"></i>Ecology and Environmental Protection</li>
+                <li><i class="fa fa-check-circle"></i>Smart Cities</li>
               </ul>
 
             </div>
@@ -504,18 +536,6 @@
   </div>-->
 
   <script type="text/javascript" src="js/script.js"></script>
-
-  <!-- Google Analytics Code -->
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-76465485-1', 'auto');
-  ga('send', 'pageview');
-
-  </script>
 
 </body>
 
