--- a/sr/posetioci.html
+++ b/sr/posetioci.html
@@ -6,7 +6,7 @@
 <head>
 
   <!-- Basic -->
-  <title>TRAFFIC SOLUTIONS EXPO</title>
+  <title>POSETIOCI | TRAFFIC SOLUTIONS EXPO</title>
 
   <!-- Define Charset -->
   <meta charset="utf-8">
@@ -75,6 +75,18 @@
 
   <!--[if IE 8]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+
+  <!-- Google Analytics Code -->
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-76465485-1', 'auto');
+  ga('send', 'pageview');
+
+  </script>
 
 </head>
 
@@ -191,11 +203,20 @@
               <li>
                 <a href="ts-exposr.html">TS-EXPO</a>
               </li>
-              <li>
-                <a href="izlagaci.html">IZLAGAČI</a>
+              <li class="drop">
+                <a class="not-link" href="#">IZLAGAČI</a>
+                <ul class="dropdown">
+                  <li><a href="profil-izlagaca.html">PROFILI IZLAGAČA</a>
+                  </li>
+                  <li><a href="uslovi-izlaganja.html">USLOVI ZA IZLAGANJE</a>
+                  </li> 
+                </ul>
               </li>
               <li>
                 <a class="active" href="posetioci.html">POSETIOCI</a>
+              </li>
+              <li>
+                <a href="program.html">PROGRAM</a>
               </li>
               <li>
                 <a href="lokacija.html">LOKACIJA I KONTAKT</a>
@@ -214,10 +235,19 @@
             <a href="ts-exposr.html">TS-EXPO</a>
           </li>
           <li>
-            <a href="izlagaci.html">IZLAGAČI</a>
+            <a class="not-link" href="#">IZLAGAČI</a>
+            <ul class="dropdown">
+              <li><a href="profil-izlagaca.html">PROFILI IZLAGAČA</a>
+              </li>
+              <li><a href="uslovi-izlaganja.html">USLOVI ZA IZLAGANJE</a>
+              </li>
+            </ul>
           </li>
           <li>
             <a class="active" href="posetioci.html">POSETIOCI</a>
+          </li>
+          <li>
+            <a href="program.html">PROGRAM</a>
           </li>
           <li>
             <a href="lokacija.html">LOKACIJA I KONTAKT</a>
@@ -499,18 +529,6 @@
   </div>-->
 
   <script type="text/javascript" src="../en/js/script.js"></script>
-
-  <!-- Google Analytics Code -->
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-76465485-1', 'auto');
-  ga('send', 'pageview');
-
-  </script>
 
   <!-- Modal -->
   <div class="modal fade" id="myModalHorizontal" tabindex="-1" role="dialog" 
