--- a/sr/izlozba.html
+++ b/sr/izlozba.html
@@ -255,7 +255,7 @@
               <h4 class="classic-title"><span>Izložba</span></h4>
 
               <!-- Some Text -->
-              <p>Traffic Solutions EXPO 2016 predstavlja prvi međunarodni sajam ove vrste na teritoriji zapadnog Balkana i jedinstvena je poslovna platforma od posebnog značaja za Srbiju i ceo region.</p>
+              <p>Traffic Solutions EXPO 2016 predstavlja prvi sajam ove vrste na teritoriji zapadnog Balkana i jedinstvena je poslovna platforma od posebnog značaja za Srbiju i ceo region.</p>
               <p>Decenije regionalne političke nestabilnosti i neulaganja u razvoj saobraćaja i saobraćajne infrastrukture ostavile su brojne posledice koje su se odrazile na privredu, bezbednost učesnika u saobraćaju ali i na opšti kvalitet života ljudi.</p>
               <p>Danas, Republika Srbija, ali i druge zemlje zapadnog Balkana kao svojevrsna raskrsnica Evrope predstavljaju perspektivno tržište koje se suočava sa velikim izazovima u pogledu ubrzanog razvoja saobraćajne infrastrukture, sve većih potreba za mobilnošću i snažnim vezama između različitih vidova saobraćaja.</p>
               <p>Specifične oblasti na koje će se fokusirati Traffic Solutions EXPO, a koje treba da doprinesu opštem razvoju, su:</p>
@@ -329,17 +329,17 @@
               <h4>Pratite nas<span class="head-line"></span></h4>
               <ul class="social-icons">
                 <li>
-                  <a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
+                  <a class="facebook" target="_blank" href="https://www.facebook.com/TrafficSolutionsExpo/"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li>
-                  <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
+                  <a class="twitter" href="https://twitter.com/ts_expo_ns"><i class="fa fa-twitter"></i></a>
                 </li>
-                <li>
+                <!-- <li>
                   <a class="google" href="#"><i class="fa fa-google-plus"></i></a>
                 </li>
                 <li>
                   <a class="skype" href="#"><i class="fa fa-skype"></i></a>
-                </li>
+                </li> -->
               </ul>
             </div>
           </div>
@@ -370,7 +370,7 @@
         <div class="copyright-section">
           <div class="row">
             <div class="col-md-6">
-              <p>&copy; 2016 ts-expo.rs - All Rights Reserved</p>
+              <p>&copy; 2017 ts-expo.rs - All Rights Reserved</p>
             </div>
             <div class="col-md-6">
               <ul class="footer-nav">
