--- a/sr/lokacija.html
+++ b/sr/lokacija.html
@@ -461,7 +461,7 @@
             <h4 class="classic-title"><span>Public connection</span></h4>
             <ul class="icons-list">
               <li><i class="fa fa-envelope-o"></i> <strong>Email:</strong> office@ts-expo.rs</li>
-              <li><i class="fa fa-mobile"></i> <strong>Mobilni:</strong> +381 (0)64 124 97 57 i +381 (0)64 100 57 77</li>
+              <li><i class="fa fa-mobile"></i> <strong>Mobilni:</strong> +381 (0)64 124 97 57 i +381 (0)63 417 555</li>
             </ul>
 
             <!-- Divider -->
@@ -508,17 +508,17 @@
               <h4>Pratite nas<span class="head-line"></span></h4>
               <ul class="social-icons">
                 <li>
-                  <a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
+                  <a class="facebook" target="_blank" href="https://www.facebook.com/TrafficSolutionsExpo/"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li>
-                  <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
+                  <a class="twitter" href="https://twitter.com/ts_expo_ns"><i class="fa fa-twitter"></i></a>
                 </li>
-                <li>
+                <!-- <li>
                   <a class="google" href="#"><i class="fa fa-google-plus"></i></a>
                 </li>
                 <li>
                   <a class="skype" href="#"><i class="fa fa-skype"></i></a>
-                </li>
+                </li> -->
               </ul>
             </div>
           </div>
@@ -532,7 +532,7 @@
               <h4><img src="../en/images/tslogo_w.png" class="img-responsive" alt="Footer Logo" /></h4>
               <p>Kontaktirajte nas:</p>
               <ul>
-                <li><span>Broj telefona:</span> +381 (0) 64 12 49 757; +381 (0) 64 10 05 777</li>
+                <li><span>Broj telefona:</span> +381 (0)64 12 49 757; +381 (0)63 417 555</li>
                 <li><span>Email:</span> office@ts-expo.rs</li>
                 <li><span>Veb-sajt:</span> www.ts-expo.rs</li>
               </ul>
@@ -549,7 +549,7 @@
         <div class="copyright-section">
           <div class="row">
             <div class="col-md-6">
-              <p>&copy; 2016 ts-expo.rs - All Rights Reserved</p>
+              <p>&copy; 2017 ts-expo.rs - All Rights Reserved</p>
             </div>
             <div class="col-md-6">
               <ul class="footer-nav">
