--- a/sr/izlagaci.html
+++ b/sr/izlagaci.html
@@ -397,17 +397,17 @@
               <h4>Pratite nas<span class="head-line"></span></h4>
               <ul class="social-icons">
                 <li>
-                  <a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
+                  <a class="facebook" target="_blank" href="https://www.facebook.com/TrafficSolutionsExpo/"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li>
-                  <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
+                  <a class="twitter" href="https://twitter.com/ts_expo_ns"><i class="fa fa-twitter"></i></a>
                 </li>
-                <li>
+                <!-- <li>
                   <a class="google" href="#"><i class="fa fa-google-plus"></i></a>
                 </li>
                 <li>
                   <a class="skype" href="#"><i class="fa fa-skype"></i></a>
-                </li>
+                </li> -->
               </ul>
             </div>
           </div>
@@ -438,7 +438,7 @@
         <div class="copyright-section">
           <div class="row">
             <div class="col-md-6">
-              <p>&copy; 2016 ts-expo.rs - All Rights Reserved</p>
+              <p>&copy; 2017 ts-expo.rs - All Rights Reserved</p>
             </div>
             <div class="col-md-6">
               <ul class="footer-nav">
