--- a/sr/posetioci.html
+++ b/sr/posetioci.html
@@ -329,7 +329,7 @@
               <!-- Call Action Button -->
               <!--<div class="button-side"><a href="#" class="btn-system border-btn btn-medium">Purchase It Now</a></div>-->
               <!-- Call Action Text -->
-              <h2 class="primary">Ulaz na TRAFFIC SOLUTIONS EXPO 2016 je besplatan za sve posetioce uz obaveznu registraciju bez koje neće biti moguć pristup sajmu.</h2>
+              <h2 class="primary">Ulaz na TRAFFIC SOLUTIONS EXPO 2017 je besplatan za sve posetioce uz obaveznu registraciju bez koje neće biti moguć pristup sajmu.</h2>
               <button class="register-button-pos" data-toggle="modal" data-target="#myModalHorizontal">PRIJAVA</button>
             </div>
           </div>
@@ -363,17 +363,17 @@
               <h4>Pratite nas<span class="head-line"></span></h4>
               <ul class="social-icons">
                 <li>
-                  <a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
+                  <a class="facebook" target="_blank" href="https://www.facebook.com/TrafficSolutionsExpo/"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li>
-                  <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
+                  <a class="twitter" href="https://twitter.com/ts_expo_ns"><i class="fa fa-twitter"></i></a>
                 </li>
-                <li>
+                <!-- <li>
                   <a class="google" href="#"><i class="fa fa-google-plus"></i></a>
                 </li>
                 <li>
                   <a class="skype" href="#"><i class="fa fa-skype"></i></a>
-                </li>
+                </li> -->
               </ul>
             </div>
           </div>
@@ -387,7 +387,7 @@
               <h4><img src="../en/images/tslogo_w.png" class="img-responsive" alt="Footer Logo" /></h4>
               <p>Kontaktirajte nas:</p>
               <ul>
-                <li><span>Broj telefona:</span> +381 (0) 64 12 49 757; +381 (0) 64 10 05 777</li>
+                <li><span>Broj telefona:</span> +381 (0)64 12 49 757; +381 (0)63 417 555</li>
                 <li><span>Email:</span> office@ts-expo.rs</li>
                 <li><span>Veb-sajt:</span> www.ts-expo.rs</li>
               </ul>
@@ -404,7 +404,7 @@
         <div class="copyright-section">
           <div class="row">
             <div class="col-md-6">
-              <p>&copy; 2016 ts-expo.rs - All Rights Reserved</p>
+              <p>&copy; 2017 ts-expo.rs - All Rights Reserved</p>
             </div>
             <div class="col-md-6">
               <ul class="footer-nav">
