--- a/sr/ts-exposr.html
+++ b/sr/ts-exposr.html
@@ -297,7 +297,7 @@
               <h4 class="classic-title"><span>TS-EXPO</span></h4>
 
               <!-- Some Text -->
-              <p>Traffic Solutions EXPO 2016 predstavlja prvi međunarodni sajam te vrste na teritoriji zapadnog Balkana i jedinstvena je poslovna platforma od posebnog značaja za Srbiju i ceo region.</p>
+              <p>Traffic Solutions EXPO 2017 predstavlja prvi sajam te vrste na teritoriji zapadnog Balkana i jedinstvena je poslovna platforma od posebnog značaja za Srbiju i ceo region.</p>
               <p>Decenije regionalne političke nestabilnosti i neulaganja u razvoj saobraćaja i saobraćajne infrastrukture ostavile su brojne posledice koje su se odrazile na privredu, bezbednost učesnika u saobraćaju ali i na opšti kvalitet života ljudi.</p>
               <p>Danas, Republika Srbija, ali i druge zemlje zapadnog Balkana kao svojevrsna raskrsnica Evrope predstavljaju perspektivno tržište koje se suočava sa velikim izazovima u pogledu ubrzanog razvoja saobraćajne infrastrukture, sve većih potreba za mobilnošću i snažnim vezama između različitih vidova saobraćaja.</p>
               <p>Specifične oblasti na koje će se fokusirati Traffic Solutions EXPO, a koje treba da doprinesu opštem razvoju, su:</p>
@@ -374,17 +374,17 @@
               <h4>Pratite nas<span class="head-line"></span></h4>
               <ul class="social-icons">
                 <li>
-                  <a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
+                  <a class="facebook" target="_blank" href="https://www.facebook.com/TrafficSolutionsExpo/"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li>
-                  <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
+                  <a class="twitter" href="https://twitter.com/ts_expo_ns"><i class="fa fa-twitter"></i></a>
                 </li>
-                <li>
+                <!-- <li>
                   <a class="google" href="#"><i class="fa fa-google-plus"></i></a>
                 </li>
                 <li>
                   <a class="skype" href="#"><i class="fa fa-skype"></i></a>
-                </li>
+                </li> -->
               </ul>
             </div>
           </div>
@@ -398,7 +398,7 @@
               <h4><img src="../en/images/tslogo_w.png" class="img-responsive" alt="Footer Logo" /></h4>
               <p>Kontaktirajte nas:</p>
               <ul>
-                <li><span>Broj telefona:</span> +381 (0) 64 12 49 757; +381 (0) 64 10 05 777</li>
+                <li><span>Broj telefona:</span> +381 (0)64 12 49 757; +381 (0)63 417 555</li>
                 <li><span>Email:</span> office@ts-expo.rs</li>
                 <li><span>Veb-sajt:</span> www.ts-expo.rs</li>
               </ul>
@@ -415,7 +415,7 @@
         <div class="copyright-section">
           <div class="row">
             <div class="col-md-6">
-              <p>&copy; 2016 ts-expo.rs - All Rights Reserved</p>
+              <p>&copy; 2017 ts-expo.rs - All Rights Reserved</p>
             </div>
             <div class="col-md-6">
               <ul class="footer-nav">
