--- a/sr/uslovi-izlaganja.html
+++ b/sr/uslovi-izlaganja.html
@@ -300,22 +300,22 @@
                 <div class="db-wrapper">
                     <div class="db-pricing-seven">
                         <ul>
-                            <li class="price">Navedene cene važe <span style="color:#000; font-weight:500;">do 01. septembra 2016. godine</span></li>
+                            <li class="price">Navedene cene važe <span style="color:#000; font-weight:500;">do 01. avgusta 2017. godine</span></li>
 
                             <li class="price_header">VRSTA USLUGE</li>
                             <li class="price_header kolona">CENA (EUR)*</li>
-                            <li>Prostor bez štand konstrukcije/m²:</li>
+                            <li><span style="font-weight: bold">Prostor bez štand konstrukcije</span> (Cena je izražena po m²):</li>
                             <li class="kolona">25</li>
-                            <li>Konstrukcija štanda sa uređenjem/m²:</li>
-                            <li class="kolona">40</li>
-                            <li>Grafika na konstrukciji štanda /m²:</li>
-                            <li class="kolona">15</li>
-                            <li>Priključak struje na štandu:</li>
-                            <li class="kolona">25</li>
-                            <li>Pult za izlagače sa dve stolice i priključkom za struju:</li>
+                            <li><span style="font-weight: bold">Štand – Tip I-52m²</span> (prostor, štand konstrukcija, sto sa stolicama, struja, grafika i hostesa)</li>
+                            <li class="kolona" style="line-height: 3em;">3750</li>
+                            <li><span style="font-weight: bold">Štand – Tip II-24m²</span> (prostor, štand konstrukcija, sto sa stolicama, struja, grafika i hostesa)</li>
+                            <li class="kolona" style="line-height: 3em;">1780</li>
+                            <li><span style="font-weight: bold">Štand – Tip III-12m²</span> (prostor, štand konstrukcija, sto sa stolicama, struja, grafika i hostesa)</li>
+                            <li class="kolona" style="line-height: 3em;">1000</li>
+                            <li><span style="font-weight: bold">Pult</span> (dve stolice i priključak za struju)/kom:</li>
                             <li class="kolona">250</li>
-                            <li>Konferencijska sala za prezentacije, 100 mesta/1h:</li>
-                            <li class="kolona">140</li>
+                            <li><span style="font-weight: bold">Konferencijska sala za prezentacije</span> (cena je izražena za salu od 100 mesta/1h):</li>
+                            <li class="kolona" style="line-height: 3em;">140</li>
                         </ul>
                         <!-- <div class="pricing-footer">
                           * Za izlagače iz R.Srbije cena se iskazuje u dinarskoj protivvrednosti po kursu NBS na dan uplate.
@@ -323,7 +323,8 @@
                     </div>
                     <div class="table_reg"><a href="../en/docs/reg/Registracioni_formular.pdf" target="_blank"><button class="register-button-izv"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> REGISTRACIONI FORMULAR</button></a></div>
                     <div class="pricing-footer">
-                      * Za izlagače iz R.Srbije cena se iskazuje u dinarskoj protivvrednosti po kursu NBS na dan uplate.
+                      * Sve cene su izražene bez PDV, koji će u fakturi biti obračunatu skladu sa važećim zakonskim propisima u vreme izvršenja usluga. PDV pada na teret kupca.<br>Za izlagače iz R.Srbije cena se iskazuje u dinarskoj protivvrednosti po kursu NBS na dan uplate.
+
                     </div>
                 </div>
             </div>
@@ -334,22 +335,22 @@
                 <div class="db-wrapper">
                     <div class="db-pricing-seven">
                         <ul>
-                            <li class="price">Navedene cene važe do <span style="color:#000; font-weight:500;">01. oktobra 2016. godine</span></li>
+                            <li class="price">Navedene cene važe do <span style="color:#000; font-weight:500;">20. oktobra 2017. godine</span></li>
 
                             <li class="price_header">VRSTA USLUGE</li>
                             <li class="price_header kolona">CENA (EUR)*</li>
-                            <li>Prostor bez štand konstrukcije/m²:</li>
-                            <li class="kolona">30</li>
-                            <li>Konstrukcija štanda sa uređenjem/m²:</li>
-                            <li class="kolona">45</li>
-                            <li>Grafika na konstrukciji štanda /m²:</li>
-                            <li class="kolona">15</li>
-                            <li>Priključak struje na štandu:</li>
+                            <li><span style="font-weight: bold">Prostor bez štand konstrukcije</span> (Cena je izražena po m²)</li>
                             <li class="kolona">25</li>
-                            <li>Pult za izlagače sa dve stolice i priključkom za struju:</li>
-                            <li class="kolona">300</li>
-                            <li>Konferencijska sala za prezentacije, 100 mesta/1h:</li>
-                            <li class="kolona">150</li>
+                            <li><span style="font-weight: bold">Štand – Tip 1</span> (prostor, štand konstrukcija, sto sa stolicama, struja, grafika i hostesa)</li>
+                            <li class="kolona" style="line-height: 3em;">4315</li>
+                            <li><span style="font-weight: bold">Štand – Tip 2</span> (prostor, štand konstrukcija, sto sa stolicama, struja, grafika i hostesa)</li>
+                            <li class="kolona" style="line-height: 3em;">2050</li>
+                            <li><span style="font-weight: bold">Štand – Tip 3</span> (prostor, štand konstrukcija, sto sa stolicama, struja, grafika i hostesa)</li>
+                            <li class="kolona" style="line-height: 3em;">1150</li>
+                            <li><span style="font-weight: bold">Pult</span> (dve stolice i priključak za struju)/kom:</li>
+                            <li class="kolona">290</li>
+                            <li><span style="font-weight: bold">Konferencijska sala za prezentacije</span> (cena je izražena za salu od 100 mesta/1h):</li>
+                            <li class="kolona" style="line-height: 3em;">160</li>
                         </ul>
                         <!-- <div class="pricing-footer">
                           * Za izlagače iz R.Srbije cena se iskazuje u dinarskoj protivvrednosti po kursu NBS na dan uplate.
@@ -357,7 +358,7 @@
                     </div>
                     <div class="table_reg"><a href="../en/docs/reg/Registracioni_formular.pdf" target="_blank"><button class="register-button-izv"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> REGISTRACIONI FORMULAR</button></a></div>
                     <div class="pricing-footer">
-                      * Za izlagače iz R.Srbije cena se iskazuje u dinarskoj protivvrednosti po kursu NBS na dan uplate.
+                      * Sve cene su izražene bez PDV, koji će u fakturi biti obračunatu skladu sa važećim zakonskim propisima u vreme izvršenja usluga. PDV pada na teret kupca.<br>Za izlagače iz R.Srbije cena se iskazuje u dinarskoj protivvrednosti po kursu NBS na dan uplate.
                     </div>
                 </div>
             </div>
@@ -444,17 +445,17 @@
               <h4>Pratite nas<span class="head-line"></span></h4>
               <ul class="social-icons">
                 <li>
-                  <a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
+                  <a class="facebook" target="_blank" href="https://www.facebook.com/TrafficSolutionsExpo/"><i class="fa fa-facebook"></i></a>
                 </li>
                 <li>
-                  <a class="twitter" href="#"><i class="fa fa-twitter"></i></a>
+                  <a class="twitter" href="https://twitter.com/ts_expo_ns"><i class="fa fa-twitter"></i></a>
                 </li>
-                <li>
+                <!-- <li>
                   <a class="google" href="#"><i class="fa fa-google-plus"></i></a>
                 </li>
                 <li>
                   <a class="skype" href="#"><i class="fa fa-skype"></i></a>
-                </li>
+                </li> -->
               </ul>
             </div>
           </div>
@@ -468,7 +469,7 @@
               <h4><img src="../en/images/tslogo_w.png" class="img-responsive" alt="Footer Logo" /></h4>
               <p>Kontaktirajte nas:</p>
               <ul>
-                <li><span>Broj telefona:</span> +381 (0) 64 12 49 757; +381 (0) 64 10 05 777</li>
+                <li><span>Broj telefona:</span> +381 (0)64 12 49 757; +381 (0)63 417 555</li>
                 <li><span>Email:</span> office@ts-expo.rs</li>
                 <li><span>Veb-sajt:</span> www.ts-expo.rs</li>
               </ul>
@@ -485,7 +486,7 @@
         <div class="copyright-section">
           <div class="row">
             <div class="col-md-6">
-              <p>&copy; 2016 ts-expo.rs - All Rights Reserved</p>
+              <p>&copy; 2017 ts-expo.rs - All Rights Reserved</p>
             </div>
             <div class="col-md-6">
               <ul class="footer-nav">
